# esp_idf_a2dp_sink_demo

./: .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  bt_app_a2d.c  bt_app_a2d.h  bt_app_avrc.c  bt_app_avrc.h  bt_app_core.c  bt_app_core.h  bt_app_gap.c  bt_app_gap.h  bt_app_i2s.c  bt_app_i2s.h  bt_app_nvs.c  bt_app_nvs.h  bt_lcd.c  bt_lcd.h  main.c
