idf_component_register(SRCS "bt_app_nvs.c"
                            "bt_app_gap.c"
                            "bt_app_i2s.c"
                            "bt_app_avrc.c"
                            "bt_app_a2d.c"
                            "bt_app_core.c"
                            "main.c"
                    INCLUDE_DIRS ".")
